# openenv-email-triage

./: Dockerfile  README.md  ai-slop.md  ai-test-v2.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  validate-submission.sh
app/: env.py  models.py  server.py  tasks.py
app/app/: env.py  tasks.py
hf-space/server/: app.py
server/: app.py  env.py  monolith.py
