[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "openenv-email-triage"
version = "1.0.0"
description = "OpenEnv email triage environment for RL agents"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "openai>=2.7.2",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "app.server:app"

[tool.openenv]
name = "email-triage-env"
version = "1.0.0"
entry_point = "app.server:app"
